--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
       <h1 class="logo me-auto me-lg-0"><a href="index.html">Ivana Foods<span>.</span></a></h1>
       <div class="contact-support d-none d-sm-block">
-        <p class="phone">+91 8056084006</p>
+        <p class="phone">R.Christopher, +91 8056084006</p>
         <h6 class="email">ivanafoods@gmail.com</h6>
       </div>
     </div>
@@ -551,8 +551,10 @@
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
               <h3>Ivana Foods<span>.</span></h3>
+
               <p>
-               
+                No.5, 4th street, <br>AGS Office colony,<br> Sabari Nagar extn, <br>Mugalivakkam, Chennai - 125<br>
+                <br>
                 <strong>Phone:</strong> +91 8056084006<br>
                 <strong>Email:</strong> ivanafoods@gmail.com<br>
               </p>
