added meta tags

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Gp Bootstrap Template - Index</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Ivana Caterings</title>
+  <meta name="description" content="Ivana Catering Business offers professional catering services for weddings, corporate events, and private parties in City, State. Contact us for delicious menus tailored to your event's needs, Top 10 Caterings.">
+  <meta name="keywords" content="ivana, catering, catering services, wedding catering, event catering, party catering, City catering, State catering, ivana caterings, near by catering services, best catering services in india, best catering services in tamil nadu, top 10 catering services, caterings, katering, ivana,">
+
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
