moved clients top of feedback

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>Ivana Caterings</title>
   <meta name="description" content="Ivana Catering Business offers professional catering services for weddings, corporate events, and private parties in City, State. Contact us for delicious menus tailored to your event's needs, Top 10 Caterings.">
-  <meta name="keywords" content="ivana, catering, catering services, wedding catering, event catering, party catering, City catering, State catering, ivana caterings, near by catering services, best catering services in india, best catering services in tamil nadu, top 10 catering services, caterings, katering, ivana,">
+  <meta name="keywords" content="ivana, catering, catering services, wedding catering, event catering, party catering, City catering, State catering, ivana caterings, near by catering services, best catering services in india, best catering services in tamil nadu, top 10 catering services, caterings, katering, ivana foods, ivana kitchen">
 
 
   <!-- Favicons -->
@@ -96,24 +96,7 @@
 
       </div>
     </section> -->
-    <!-- ======= Clients Section ======= -->
-    <section id="clients" class="clients">
-      <div class="container" data-aos="zoom-in">
-        <div class="section-title">
-          <h2>Clients</h2>
-          <p>Check our Clients</p>
-        </div>
-        <div class="clients-slider swiper">
-          <div class="swiper-wrapper align-items-center">
-            <div class="swiper-slide"><img src="assets/img/icons/gsquare.webp" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/icons/casagrand.webp" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/icons/tvsemerald.png" class="img-fluid" alt=""></div>
-          </div>
-          <div class="swiper-pagination"></div>
-        </div>
-
-      </div>
-    </section><!-- End Clients Section -->
+   
 
     <!-- ======= Features Section ======= -->
     <!-- <section id="features" class="features">
@@ -471,6 +454,25 @@
       </div>
     </section> -->
     <!-- End Counts Section -->
+
+     <!-- ======= Clients Section ======= -->
+     <section id="clients" class="clients">
+      <div class="container" data-aos="zoom-in">
+        <div class="section-title">
+          <h2>Clients</h2>
+          <p>Check our Clients</p>
+        </div>
+        <div class="clients-slider swiper">
+          <div class="swiper-wrapper align-items-center">
+            <div class="swiper-slide"><img src="assets/img/icons/gsquare.webp" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/icons/casagrand.webp" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/icons/tvsemerald.png" class="img-fluid" alt=""></div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+
+      </div>
+    </section><!-- End Clients Section -->
 
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials">
