Added name in footer

--- a/index.html
+++ b/index.html
@@ -558,6 +558,7 @@
               <p>
                 No.5, 4th street, <br>AGS Office colony,<br> Sabari Nagar extn, <br>Mugalivakkam, Chennai - 125<br>
                 <br>
+                <strong>Name:</strong> R.Christopher<br>
                 <strong>Phone:</strong> +91 8056084006<br>
                 <strong>Email:</strong> ivanafoods@gmail.com<br>
               </p>
