call added and catering removed

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Ivana Caterings</title>
-  <meta name="description" content="Ivana Catering Business offers professional catering services for weddings, corporate events, and private parties in City, State. Contact us for delicious menus tailored to your event's needs, Top 10 Caterings.">
-  <meta name="keywords" content="ivana, catering, catering services, wedding catering, event catering, party catering, City catering, State catering, ivana caterings, near by catering services, best catering services in india, best catering services in tamil nadu, top 10 catering services, caterings, katering, ivana foods, ivana kitchen">
+  <title>Ivana Foods</title>
+  <meta name="description" content="Ivana Foods Business offers professional Foods services for weddings, corporate events, and private parties in City, State. Contact us for delicious menus tailored to your event's needs, Top 10 Foods.">
+  <meta name="keywords" content="ivana, Foods, Foods services, wedding Foods, event Foods, party Foods, City Foods, State Foods, ivana Foods, near by Foods services, best Foods services in india, best Foods services in tamil nadu, top 10 Foods services, Foods, katering, ivana foods, ivana kitchen">
 
 
   <!-- Favicons -->
@@ -48,6 +48,12 @@
       <div class="contact-support d-none d-sm-block">
         <p class="phone">R.Christopher, +91 8056084006</p>
         <h6 class="email">ivanafoods@gmail.com</h6>
+        
+      </div>
+      <div class="d-block d-sm-none">
+        <a href="#footer" class="call">
+          <i class="ri-phone-fill"></i>
+        </a>
       </div>
     </div>
   </header><!-- End Header -->
@@ -495,7 +501,7 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Impeccable service, attentive staff ensure seamless event execution, exceeding expectations and leaving guests thoroughly satisfied and eager for future engagements with Ivana Catering.
+                  Impeccable service, attentive staff ensure seamless event execution, exceeding expectations and leaving guests thoroughly satisfied and eager for future engagements with Ivana Foods.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -506,7 +512,7 @@
               
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  With a commitment to quality, Ivana Catering sources fresh ingredients, crafting dishes that showcase culinary expertise and delight the senses of all who partake.
+                  With a commitment to quality, Ivana Foods sources fresh ingredients, crafting dishes that showcase culinary expertise and delight the senses of all who partake.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -516,7 +522,7 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Ivana Catering creates memorable experiences through exquisite taste, professional service, and meticulous attention to detail, ensuring every event is a resounding success.
+                  Ivana Foods creates memorable experiences through exquisite taste, professional service, and meticulous attention to detail, ensuring every event is a resounding success.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -526,7 +532,7 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  From presentation to taste, Ivana Catering consistently delivers excellence, earning acclaim and fostering long-lasting client relationships built on trust and satisfaction.
+                  From presentation to taste, Ivana Foods consistently delivers excellence, earning acclaim and fostering long-lasting client relationships built on trust and satisfaction.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
